# parallel-computing

./: README.md
PFDM/: CMakeLists.txt
PFDM/header/: Control.h  Defines.h  Geometry.h  IO.h  Solver.h  Util.h  Xsec.h
PFDM/input/: Debug.inp  DebugM.inp  IAEA_3D.inp  Matrix.txt  MatrixF.txt  input.inp  test.inp
PFDM/results/: IAEA_3D_MPI.txt  result_analysis.ipynb
PFDM/source/: Control.cpp  Geometry.cpp  IO.cpp  Main.cpp  Solver.cpp  Util.cpp  Xsec.cpp
PFDM/xs/: IAEA_3D.xs  c5g7.xs  c5g7.xslib  xsec.xs
lecture02/: hello.cpp  hello.out  mimic_omp.c  mimic_omp.h  practice.cpp  practice.out
lecture03/: a.out  homework.cpp  homework.ipynb  homework.out  homework_temp.cpp  main.cpp  main.out
lecture04/: main.cpp  main.out
lecture05/: main.cpp  main.out  numerical_integration.cpp  numerical_integration.out
lecture06/: main.cpp  main.out  matrix_multiplication.cpp  matrix_multiplication.out  matrix_multiplication_non_blocking.cpp  matrix_multiplication_non_blocking.out
lecture07/: main.cpp
lecture08/: adaptive_transpose.cpp  adaptive_transpose.out  homework.cpp  homework.out  main.cpp  main.out
lecture09/: main.cpp  main.cu  main.out
lecture10/: main.cu  main.out
lecture11/: main.cpp
quiz/: quiz02_mpi.cpp  quiz02_mpi.out  quiz02_mpi2.cpp  quiz02_mpi2.out  quiz02_mpi3.cpp  quiz02_mpi3.out  quiz02_openmp.cpp  quiz02_openmp.out  quiz03_cuda.cu  quiz03_mpi.cpp  quiz03_mpi.out
